пофиксил сохранение состояния выбранной темы, языка и шрифта в настройках

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,10 @@
   --on_secondary: #1D192B;
   --on_secondary_hover: #201d2c;
   --secondary_active: #E8DEF8;
+  --accent: #D0BCFF;
+  --on_accent: #381E72;
+  --green: #259e37;
+  --red: #9e2424;
 }
 
 $heading_big: 28px;
