--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,8 @@ body {
   font-family: Roboto;
   height: 100%;
   padding-bottom: 80px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 
@@ -339,6 +341,10 @@ nav {
 
     .input__word {
       display: flex;
+
+      .letter{
+        color: var(--on_secondary)
+      }
     }
 
     .whitespace {
