--- a/frontend/src/views/Login/Login.scss
+++ b/frontend/src/views/Login/Login.scss
@@ -29,6 +29,12 @@
     gap: 18px;
 }
 
+.auth_block_error_message{
+    margin-top: -42px;
+    font-size: 14px;
+    margin-bottom: 14px;
+}
+
 .auth-block__input {
     position: relative;
 }
