еще один коммит

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -340,6 +340,10 @@ nav {
             .slider.left {
                 background-position: right center, center;
             }
+
+            input{
+                width: 120px;
+            }
         }
     }
 }
