--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,61 +1,8 @@
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
 @import "https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap";
 @import "../src/globalStyles/Variables.scss";
+@import "../src/globalStyles/Themes.scss";
 @import "./NullStyles.scss";
-
-:root[data-theme='dark'] {
-    --background: #1C1B1F;
-    --background_secondary: #2A2831;
-    --on_background: #E8DEF8;
-    --on_secondary: #CCC2DC;
-    --on_secondary_hover: #e4d9f5;
-    --secondary_active: #4A4458;
-    --on_accent: #381E72;
-    --accent: #D0BCFF;
-    --input: #545062;
-    --green: #7BB283;
-    --red: #A86B6B;
-
-    //цвета для клавиатуры
-    --keyboard-button-background-green: #264a36;
-    --keyboard-button-accent-green: #78e4a8;
-    --keyboard-button-background-blue: #11282c;
-    --keyboard-button-accent-blue: #62e2fa;
-    --keyboard-button-background-rose: #603f4c;
-    --keyboard-button-accent-rose: #faa5c8;
-    --keyboard-button-background-yellow: #635d32;
-    --keyboard-button-accent-yellow: #fdef80;
-    --keyboard-button-background-orange: #624b2e;
-    --keyboard-button-accent-orange: #fcc276;
-    --active-keyboard-button-text-color: #381E72;
-
-}
-
-:root[data-theme='light'] {
-    --background: #FFFBFE;
-    --background_secondary: #F3EDF7;
-    --on_background: #1C1B1F;
-    --on_secondary: #1D192B;
-    --on_secondary_hover: #201d2c;
-    --secondary_active: #E8DEF8;
-    --accent: #D0BCFF;
-    --on_accent: #381E72;
-    --green: #259e37;
-    --red: #9e2424;
-
-    //цвета для клавиатуры
-    --keyboard-button-background-green: #78e4a8;
-    --keyboard-button-accent-green: #3c7355;
-    --keyboard-button-background-blue: #62e2fa;
-    --keyboard-button-accent-blue: #347986;
-    --keyboard-button-background-rose: #faa5c8;
-    --keyboard-button-accent-rose: #86586b;
-    --keyboard-button-background-yellow: #fdef80;
-    --keyboard-button-accent-yellow: #888145;
-    --keyboard-button-background-orange: #fcc276;
-    --keyboard-button-accent-orange: #87683f;
-    --active-keyboard-button-text-color: #F3EDF7;
-}
 
 main {
     margin-left: auto;
@@ -133,56 +80,6 @@ header {
 
     span {
         font-size: 18px;
-    }
-}
-
-.cards__wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: $gap;
-
-    * {
-        transition: cubic-bezier(0.075, 0.82, 0.165, 1);
-        transition: 200ms;
-    }
-
-    .card {
-        background-color: var(--background_secondary);
-        border-radius: $border_radius;
-        text-decoration: none;
-        color: var(--on_secondary);
-
-        &:hover {
-            color: var(--on_secondary_hover);
-            border-radius: 50px;
-
-            .card__img {
-                border-radius: 50px;
-            }
-        }
-
-        .card__img {
-            height: 200px;
-            border-radius: 24px;
-        }
-
-        .card__text {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            padding: 24px;
-
-            .card__title {
-                font-size: $heading_medium;
-                font-weight: 500;
-            }
-
-            .card__description {
-                font-size: $text_small;
-                line-height: 24px;
-                font-weight: 400;
-            }
-        }
     }
 }
 
@@ -412,143 +309,6 @@ nav {
     }
 }
 
-.levels__container {
-    margin-top: $content_spacing;
-    display: flex;
-    flex-direction: column;
-    gap: $content_spacing;
-
-
-    .levels {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-
-        .levels__buttons {
-            display: flex;
-            gap: 18px;
-
-            button {
-                background-color: var(--background_secondary);
-                padding: 13px 24px;
-                border: none;
-                border-radius: 24px;
-                color: var(--on_background);
-            }
-        }
-    }
-}
-
-.typing__container {
-    margin-top: $content_spacing;
-    display: flex;
-    flex-direction: column;
-    gap: $content_spacing;
-
-    .input__section {
-        position: relative;
-        display: flex;
-        line-height: 140%;
-        font-weight: 400;
-        font-size: $heading_medium;
-        color: var(--input);
-        flex-wrap: wrap;
-        overflow: hidden;
-        height: 68px;
-
-        .input__word {
-            display: flex;
-
-            .letter {
-                color: var(--on_secondary)
-            }
-        }
-
-        .whitespace {
-            min-width: 10px;
-        }
-
-        .user__typings {
-            width: 936px;
-            position: absolute;
-        }
-
-        .letter__correct {
-            color: var(--green);
-        }
-
-        .letter__incorrect {
-            color: var(--red);
-        }
-
-        .whitespace__incorrect {
-            background: var(--red);
-        }
-
-        .caret {
-            display: inline-block;
-            position: absolute;
-            border-radius: 3px;
-            margin-left: -3px;
-            margin-top: -2px;
-            height: 24px;
-            transition: 0.1s;
-            transform-origin: top left;
-            animation: caretFlashSmooth 1s infinite;
-            font-size: $heading_medium;
-            color: var(--on_background);
-        }
-    }
-
-    .typing__metrics {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-
-        div {
-            display: flex;
-            align-items: center;
-            background: var(--accent);
-            color: var(--on_accent);
-            font-size: $text_mini;
-            font-weight: 500;
-            line-height: 20px;
-            padding: 10px 24px 10px 16px;
-            max-width: fit-content;
-            border-radius: 15px;
-
-            span {
-                margin-right: 6px;
-                font-size: 16px;
-            }
-
-
-        }
-
-        .accuracy {
-            span {
-                font-size: 20px;
-            }
-        }
-    }
-}
-
-.results {
-    margin-top: 40px;
-    display: flex;
-    gap: 50px;
-}
-
-.results__item {
-    display: flex;
-    flex-direction: column;
-    font-weight: 500;
-    gap: 6px;
-}
-
-.results__item_title {
-    font-size: 96px;
-}
 
 @keyframes caretFlashSmooth {
 
