--- a/frontend/src/globalStyles/Variables.scss
+++ b/frontend/src/globalStyles/Variables.scss
@@ -1,9 +1,12 @@
 // Headings varaiables
+$heading_huge: 96px;
 $heading_big: 28px;
 $heading_medium: 24px;
 $heading_small: 20px;
 
 // Font variables
+$text_big: 20px;
+$text_regular: 18px;
 $text_small: 16px;
 $text_mini: 14px;
 
