Поправил то на что ругается vite

--- a/frontend/src/components/Results/Results.scss
+++ b/frontend/src/components/Results/Results.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     font-weight: 500;
-    gap: $gap/2;
+    gap: calc($gap / 2);
 }
 
 .results__item_title {
