--- a/frontend/src/views/Profile/Profile.scss
+++ b/frontend/src/views/Profile/Profile.scss
@@ -34,7 +34,7 @@
 .secondary-stat {
     display: flex;
     flex-direction: column;
-    gap: $gap/2;
+    gap: calc($gap / 2);
     background: var(--background_secondary);
     color: var(--on_background);
     width: fit-content;
@@ -56,11 +56,13 @@
     border-collapse: collapse;
 
     .mode {
-        width: 20%;   
+        width: 20%;
     }
+
     .wpm {
-        width: 20%;   
+        width: 20%;
     }
+
     .accuracy {
         width: 20%;
     }
