--- a/frontend/src/components/Card/Card.scss
+++ b/frontend/src/components/Card/Card.scss
@@ -16,9 +16,10 @@
     }
 
     .card__img {
-        object-fit: cover;
+        width: 100%;
         height: 200px;
         border-radius: 24px;
+        object-fit: cover;
     }
 
     .card__text {
