--- a/frontend/src/components/LearningIndicator/LearningIndicator.scss
+++ b/frontend/src/components/LearningIndicator/LearningIndicator.scss
@@ -7,6 +7,7 @@
 
 .learning-indicator__chars {
     display: flex;
+    align-items: center;
     gap: 4px;
 }
 
@@ -17,6 +18,7 @@
 }
 
 .learning-indicator__main-char {
+    align-items: center;
     display: flex;
     gap: 4px;
 }
